<resources>
    <string name="app_name">&#x200A;&#x200A;Mr. Cofrade</string>

    <!-- Elementos del menu de la aplicación -->
    <string name="app_navigation_view_name">Cofradías de Bilbao</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_calendario_eventos">Calendario de Eventos</string>
    <string name="menu_galeria">Galería de Imágenes</string>
    <string name="menu_pasos">Galería de Pasos</string>
    <string name="menu_contacto">Contactos</string>
    <string name="menu_museo">Museo de Pasos</string>
    <string name="menu_procesiones">Procesiones</string>
    <string name="menu_login_usuarios">Usuarios</string>
    <string name="menu_share_app">Compartir Aplicación</string>
    <string name="texto_share_app">\nDeja que te recomiende esta aplicación\n\n</string>
    <string name="texto_compartir_app">Compartir aplicación</string>

    <string name="action_preferencias">Preferencias</string>
    <string name="action_share">Compartir</string>
    <string name="action_eliminar_posicion">Eliminar coordenadas procesion</string>
    <string name="action_settings">Settings</string>

    <!-- Nombre pestañas cofradias -->
    <string name="tab_detail_one">Cofradía</string>
    <string name="tab_detail_two">Detalle</string>
    <string name="tab_detail_three">Pasos</string>
    <string name="tab_detail_four">Galería</string>

    <!-- Nombre pestañas procesiones -->
    <string name="tab_maps_one">Detalle</string>
    <string name="tab_maps_two">Pasos</string>
    <string name="tab_maps_three">Ruta</string>
    <string name="tab_maps_four">Mapa</string>

    <!-- Etiquetas detalle Cofradía -->
    <string name="detail_cofradia_vestimenta">Vestimenta:&#x200A;</string>
    <string name="detail_cofradia_fundacion">Fundación:&#x200A;</string>
    <string name="detail_cofradia_sede">Sede:&#x200A;</string>
    <string name="detail_cofradia_numero_procesiones">Número de Procesiones:&#x200A;</string>
    <string name="detail_cofradia_hermano_abad">Hermano Abad:&#x200A;</string>
    <string name="detail_titulo_procesiones_view">PROCESIONES</string>
    <string name="detail_titulo_contacto">CONTACTO</string>
    <string name="detail_cofradia_direccion">Dirección:&#x200A;</string>
    <string name="detail_cofradia_telefono">Teléfono:&#x200A;</string>
    <string name="detail_cofradia_web">Web:&#x200A;</string>

    <!-- Etiquetas detalle Procesion -->
    <string name="detail_procesion_nombre">Procesión:&#x200A;</string>
    <string name="detail_procesion_dia">Día:&#x200A;</string>
    <string name="detail_procesion_fecha">Fecha:&#x200A;</string>
    <string name="detail_procesion_hora">Hora de inicio:&#x200A;</string>
    <string name="detail_procesion_inicio">Lugar de inicio:&#x200A;</string>
    <string name="detail_procesion_pasos">Pasos:&#x200A;</string>

    <!-- Etiquetas fragmento mapas -->
    <string name="title_activity_maps">&#x200A;&#x200A;Mr. Cofrade</string>

    <!-- Etiquetas permisos -->
    <string name="permiso_gps_ok">Permiso registrado correctamente.</string>
    <string name="permiso_gps_ko">Para poder establecer su ubicación es ncesario que acepte este permiso.</string>
    <string name="permiso_storage_ok">Permiso registrado correctamente.</string>
    <string name="permiso_storage_ko">Para poder compartir imágenes es necesario que acepte este permiso.</string>
    <string name="permiso_calendar_ok">Permiso registrado correctamente.</string>
    <string name="permiso_calendar_ko">Para poder registrar eventos en el calendario es necesario que acepte este permiso.</string>

    <!-- Etiquetas Share Intent -->
    <string name="error_share_intent">Se ha producido un error a lintentar compartir la imagen.</string>
    <string name="texto_compartir_imagen">Compartir aplicación</string>

    <!--Etiquetas Evento en Calendario -->
    <string name="event_sdk1_url">content://com.android.calendar/events</string>
    <string name="event_sdk2_url">content://calendar/events</string>
    <string name="reminder_sdk1_url">content://com.android.calendar/reminders</string>
    <string name="reminder_sdk2_url">content://calendar/reminders</string>
    <string name="event_calendar_descripcion">Evento organizado por la cofradía:</string>
    <string name="event_calendar_ok">Evento registrado correctamente.</string>
    <string name="event_calendar_existe">Evento ya registrado anteriormente en el calendario.</string>
    <string name="event_calendar_ko">Se ha producido un error a lintentar registrar el evento en el calendario.</string>
    <string name="event_exist_calender">El evento ya esta registrado en el calendario.</string>

    <!-- Etiquetas pantalla autentificación -->
    <string name="boton_aceptar">\t\t\t\t\t\tACEPTAR</string>
    <string name="boton_salir">\t\t\t\t\tSALIR</string>
    <string name="user_hint">Usuario</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_message_ok">Usuario y contraseña correctos.</string>
    <string name="login_message_ko_1">Usuario y contrasea incorrectos. Dispone de</string>
    <string name="login_message_ko_2">intentos más para identificarse correctamente.</string>
    <string name="login_message_salir">Desconexión realizada con éxito.</string>

    <!-- Etiquetas descripciones de imagenes -->
    <string name="imagen_logo">Mr. Cofrade Logo</string>
    <string name="imagen_galeria">Imagen Galería</string>
    <string name="imagen_detail_procesion">Imagen Procesión</string>
    <string name="imagen_cofradia">Imagen Cofradía</string>
    <string name="escudo_cofradia">Escudo Cofradía</string>
    <string name="imagen_evento">Imagen Evento</string>
    <string name="imagen_indicacion">Imagen Indicación</string>
    <string name="imagen_back_arrow">Atrás</string>
    <string name="imagen_ayuda_evento_cabecera">Ayuda Cabecera</string>
    <string name="imagen_ayuda_evento_flecha">Ayuda Flecha</string>

    <!-- Etiquetas ayuda eventos -->
    <string name="titulo_ayuda_eventos">Ayuda Eventos</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="saltar">SALTAR</string>
    <string name="iniciar">INICIAR</string>
    <string name="ayuda_evento_mostrar_ayuda">No volver a ver la ayuda.</string>
    <string name="ayuda_evento_slide_1_titulo">Añadir eventos al calendario</string>
    <string name="ayuda_evento_slide_1_descripcion">Al pulsar sobre la cabecera de los los eventos para un determinado día se procederá a añadir estos en el calendario. Esta operación se puede realizar para todos los días mostrados.</string>
    <string name="ayuda_evento_slide_2_titulo">Acceder al evento</string>
    <string name="ayuda_evento_slide_2_descripcion">Al pulsar sobre los diferentes eventos accedera a la cofradía que organiza al evento seleccionado.</string>


</resources>
