<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/app_name">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_calendario_eventos"
                    android:icon="@drawable/ic_menu_calendar"
                    android:title="@string/menu_calendario_eventos" />
                <item
                    android:id="@+id/nav_galeria"
                    android:icon="@drawable/ic_menu_galleria"
                    android:title="@string/menu_galeria" />
                <item
                    android:id="@+id/nav_pasos"
                    android:icon="@drawable/ic_menu_pasos"
                    android:title="@string/menu_pasos" />
            </group>
        </menu>
    </item>

    <item android:title="Enlaces de interés">
        <menu>
            <item
                android:id="@+id/nav_museo_pasos"
                android:icon="@drawable/ic_menu_web"
                android:title="@string/menu_museo" />
            <item
                android:id="@+id/nav_contacto"
                android:icon="@drawable/ic_menu_contacto"
                android:title="@string/menu_contacto" />
            <item
                android:id="@+id/nav_santa_biblia"
                android:icon="@drawable/ic_menu_biblia"
                android:title="@string/menu_santa_biblia" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
        </menu>
    </item>

</menu>
