<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:layout_marginTop="80dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/ayuda_evento_procesion"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/imagen_ayuda_evento_cabecera" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:id="@+id/imageView2"
                android:src="@drawable/ayuda_flecha"
                android:contentDescription="@string/imagen_ayuda_evento_flecha" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ayuda_evento_slide_2_titulo"
                android:textColor="@android:color/white"
                android:textSize="@dimen/slide_title"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="@dimen/desc_padding"
                android:paddingRight="@dimen/desc_padding"
                android:text="@string/ayuda_evento_slide_2_descripcion"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/slide_desc" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>