<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageView android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/imagen_logo" />

        <!-- User Label -->
        <TextView
            android:id="@+id/logged_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=""
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_hint"
                android:inputType="text"
                android:drawableRight="@android:drawable/ic_delete" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                android:drawableRight="@android:drawable/ic_delete" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="368px"
            android:layout_height="133px"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ic_background_log_in"
            android:textColor="@color/colorIcons"
            android:text="@string/boton_aceptar"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/preferences_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mostrar preferencias"
            android:layout_alignParentTop="true"
            android:onClick="getPreferences" />

    </LinearLayout>
</ScrollView>
